ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

static void callOnMethodChannel(Openim_Listener listener, Dart_Port_DL port, char *message) {
    listener.onMethodChannel(port, message);
}
extern void GetAllConversationList(char* operationID);
extern void GetConversationListSplit(char* operationID, int offset, int count);
extern void GetOneConversation(char* operationID, int32_t sessionType, char* sourceID);
extern void GetMultipleConversation(char* operationID, char* conversationIDList);
extern char* GetConversationIDBySessionType(char* operationID, char* sourceID, int sessionType);
extern void GetTotalUnreadMsgCount(char* operationID);
extern void MarkConversationMessageAsRead(char* operationID, char* conversationID);
extern void MarkAllConversationMessageAsRead(char* operationID);
extern void SetConversation(char* operationID, char* conversationID, char* draftText);
extern void SetConversationDraft(char* operationID, char* conversationID, char* draftText);
extern void HideConversation(char* operationID, char* conversationID);
extern void ChangeInputStates(char* operationID, char* conversationID, _Bool focus);
extern void HideAllConversations(char* operationID);
extern void ClearConversationAndDeleteAllMsg(char* operationID, char* conversationID);
extern void GetInputStates(char* operationID, char* conversationID, char* userID);
extern void DeleteConversationAndDeleteAllMsg(char* operationID, char* conversationID);
extern char* CreateTextMessage(char* operationID, char* text);
extern char* CreateTextAtMessage(char* operationID, char* text, char* atUserList, char* atUsersInfo, char* message);