lib/openim_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_openim_sdk_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class OpenimFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenimFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenimFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void callOnMethodChannel(
    Openim_Listener listener,
    int port,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _callOnMethodChannel(listener, port, message);
  }

  late final _callOnMethodChannelPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(Openim_Listener, Dart_Port_DL, ffi.Pointer<ffi.Char>)
    >
  >('callOnMethodChannel');
  late final _callOnMethodChannel =
      _callOnMethodChannelPtr
          .asFunction<
            void Function(Openim_Listener, int, ffi.Pointer<ffi.Char>)
          >();

  void GetAllConversationList(ffi.Pointer<ffi.Char> operationID) {
    return _GetAllConversationList(operationID);
  }

  late final _GetAllConversationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetAllConversationList',
      );
  late final _GetAllConversationList =
      _GetAllConversationListPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void GetConversationListSplit(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _GetConversationListSplit(operationID, offset, count);
  }

  late final _GetConversationListSplitPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)
    >
  >('GetConversationListSplit');
  late final _GetConversationListSplit =
      _GetConversationListSplitPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  void GetOneConversation(
    ffi.Pointer<ffi.Char> operationID,
    int sessionType,
    ffi.Pointer<ffi.Char> sourceID,
  ) {
    return _GetOneConversation(operationID, sessionType, sourceID);
  }

  late final _GetOneConversationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>)
    >
  >('GetOneConversation');
  late final _GetOneConversation =
      _GetOneConversationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)
      >();

  void GetMultipleConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
  ) {
    return _GetMultipleConversation(operationID, conversationIDList);
  }

  late final _GetMultipleConversationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetMultipleConversation');
  late final _GetMultipleConversation =
      _GetMultipleConversationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> GetConversationIDBySessionType(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> sourceID,
    int sessionType,
  ) {
    return _GetConversationIDBySessionType(operationID, sourceID, sessionType);
  }

  late final _GetConversationIDBySessionTypePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
      )
    >
  >('GetConversationIDBySessionType');
  late final _GetConversationIDBySessionType =
      _GetConversationIDBySessionTypePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void GetTotalUnreadMsgCount(ffi.Pointer<ffi.Char> operationID) {
    return _GetTotalUnreadMsgCount(operationID);
  }

  late final _GetTotalUnreadMsgCountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetTotalUnreadMsgCount',
      );
  late final _GetTotalUnreadMsgCount =
      _GetTotalUnreadMsgCountPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void MarkConversationMessageAsRead(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _MarkConversationMessageAsRead(operationID, conversationID);
  }

  late final _MarkConversationMessageAsReadPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('MarkConversationMessageAsRead');
  late final _MarkConversationMessageAsRead =
      _MarkConversationMessageAsReadPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void MarkAllConversationMessageAsRead(ffi.Pointer<ffi.Char> operationID) {
    return _MarkAllConversationMessageAsRead(operationID);
  }

  late final _MarkAllConversationMessageAsReadPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'MarkAllConversationMessageAsRead',
      );
  late final _MarkAllConversationMessageAsRead =
      _MarkAllConversationMessageAsReadPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void SetConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> draftText,
  ) {
    return _SetConversation(operationID, conversationID, draftText);
  }

  late final _SetConversationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('SetConversation');
  late final _SetConversation =
      _SetConversationPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void SetConversationDraft(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> draftText,
  ) {
    return _SetConversationDraft(operationID, conversationID, draftText);
  }

  late final _SetConversationDraftPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('SetConversationDraft');
  late final _SetConversationDraft =
      _SetConversationDraftPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void HideConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _HideConversation(operationID, conversationID);
  }

  late final _HideConversationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('HideConversation');
  late final _HideConversation =
      _HideConversationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void ChangeInputStates(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool focus,
  ) {
    return _ChangeInputStates(operationID, conversationID, focus);
  }

  late final _ChangeInputStatesPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Bool)
    >
  >('ChangeInputStates');
  late final _ChangeInputStates =
      _ChangeInputStatesPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)
      >();

  void HideAllConversations(ffi.Pointer<ffi.Char> operationID) {
    return _HideAllConversations(operationID);
  }

  late final _HideAllConversationsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'HideAllConversations',
      );
  late final _HideAllConversations =
      _HideAllConversationsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void ClearConversationAndDeleteAllMsg(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _ClearConversationAndDeleteAllMsg(operationID, conversationID);
  }

  late final _ClearConversationAndDeleteAllMsgPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('ClearConversationAndDeleteAllMsg');
  late final _ClearConversationAndDeleteAllMsg =
      _ClearConversationAndDeleteAllMsgPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetInputStates(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> userID,
  ) {
    return _GetInputStates(operationID, conversationID, userID);
  }

  late final _GetInputStatesPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('GetInputStates');
  late final _GetInputStates =
      _GetInputStatesPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void DeleteConversationAndDeleteAllMsg(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _DeleteConversationAndDeleteAllMsg(operationID, conversationID);
  }

  late final _DeleteConversationAndDeleteAllMsgPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('DeleteConversationAndDeleteAllMsg');
  late final _DeleteConversationAndDeleteAllMsg =
      _DeleteConversationAndDeleteAllMsgPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> CreateTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _CreateTextMessage(operationID, text);
  }

  late final _CreateTextMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateTextMessage');
  late final _CreateTextMessage =
      _CreateTextMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateTextAtMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> atUserList,
    ffi.Pointer<ffi.Char> atUsersInfo,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateTextAtMessage(
      operationID,
      text,
      atUserList,
      atUsersInfo,
      message,
    );
  }

  late final _CreateTextAtMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateTextAtMessage');
  late final _CreateTextAtMessage =
      _CreateTextAtMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
